Turning project article responsive and adding link to the project.

--- a/frontend/src/assets/json/projectsList.json
+++ b/frontend/src/assets/json/projectsList.json
@@ -14,7 +14,8 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]
+        ],
+        "url":  "www.google.com"
     },
     {
         "id": 2,
@@ -31,7 +32,8 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]        
+        ],
+        "url":  "www.google.com"        
     }, 
     {
         "id": 3,
@@ -48,7 +50,8 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]        
+        ],
+        "url":  "www.google.com"        
     },
     {
         "id": 4,
@@ -65,7 +68,8 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]        
+        ],
+        "url":  "www.google.com"        
     },
     {
         "id": 5,
@@ -82,7 +86,8 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]        
+        ],
+        "url":  "www.google.com"        
     },
     {
         "id": 6,
@@ -99,7 +104,8 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]        
+        ],
+        "url":  "www.google.com"        
     },
     {
         "id": 7,
@@ -116,7 +122,8 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]
+        ],
+        "url":  "www.google.com"
     },
     {
         "id": 8,
@@ -133,7 +140,8 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]        
+        ],
+        "url":  "www.google.com"        
     },
     {
         "id": 9,
@@ -150,7 +158,8 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]        
+        ],
+        "url":  "www.google.com"        
     },
     {
         "id": 10,
@@ -167,6 +176,7 @@
                 "language": "C#",
                 "percentage": 0.30
             }
-        ]        
+        ],
+        "url":  "www.google.com"        
     }
 ]
