--- a/frontend/src/assets/json/projectsList.json
+++ b/frontend/src/assets/json/projectsList.json
@@ -177,6 +177,6 @@
                 "percentage": 0.30
             }
         ],
-        "url":  "www.google.com"        
+        "url":  "https://www.google.com.br/?hl=pt-BR"        
     }
 ]
